consolidate google oauth2 flow