@@ -3,24 +3,28 @@ package com.meemaw.auth.sso.service.google;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.meemaw.auth.sso.model.SsoSocialLogin;
-import com.meemaw.auth.sso.model.google.GoogleAccessTokenClaims;
 import com.meemaw.auth.sso.model.google.GoogleErrorResponse;
 import com.meemaw.auth.sso.model.google.GoogleTokenResponse;
+import com.meemaw.auth.sso.model.google.GoogleUserInfoResponse;
 import com.meemaw.auth.sso.service.SsoService;
 import com.meemaw.shared.rest.response.Boom;
 import io.vertx.axle.core.Vertx;
 import io.vertx.axle.core.buffer.Buffer;
 import io.vertx.axle.ext.web.client.HttpResponse;
 import io.vertx.axle.ext.web.client.WebClient;
+import java.math.BigInteger;
 import java.net.URI;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
+import java.security.SecureRandom;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 import java.util.concurrent.CompletionStage;
 import javax.annotation.PostConstruct;
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
+import javax.ws.rs.core.Response.Status;
 import javax.ws.rs.core.UriBuilder;
 import lombok.extern.slf4j.Slf4j;
 import org.eclipse.microprofile.config.inject.ConfigProperty;
@@ -30,11 +34,13 @@ import org.eclipse.microprofile.config.inject.ConfigProperty;
 public class SsoGoogleServiceImpl implements SsoGoogleService {
 
 
-  private static final Collection<String> SCOPE_LIST = Collections.singletonList("email");
-  private static final String SCOPES = String.join(",", SCOPE_LIST);
-  private static final String USER_INFO_SERVER_URL = "https://www.googleapis.com/oauth2/v3/tokeninfo";
+  private static final Collection<String> SCOPE_LIST = List.of("openid", "email", "profile");
+  private static final String SCOPES = String.join(" ", SCOPE_LIST);
   private static final String AUTHORIZATION_SERVER_URL = "https://accounts.google.com/o/oauth2/auth";
+
   private static final String TOKEN_SERVER_URL = "https://oauth2.googleapis.com/token";
+  private static final String TOKEN_INFO_SERVER_URL = "https://oauth2.googleapis.com/tokeninfo";
+
 
   @ConfigProperty(name = "google.client.id")
   String GOOGLE_CLIENT_ID;
@@ -59,35 +65,43 @@ public class SsoGoogleServiceImpl implements SsoGoogleService {
   }
 
   @Override
-  public URI buildAuthorizationURI(String dest, String redirectURI) {
+  public URI buildAuthorizationURI(String state, String redirectURI) {
     return UriBuilder.fromUri(AUTHORIZATION_SERVER_URL)
         .queryParam("client_id", GOOGLE_CLIENT_ID)
         .queryParam("redirect_uri", redirectURI)
         .queryParam("response_type", "code")
         .queryParam("scope", SCOPES)
-        .queryParam("state", dest)
+        .queryParam("state", state)
         .build();
   }
 
+  /**
+   * Generates a secure state with a secure random string of length 26 as a prefix.
+   *
+   * @param destination
+   * @return secure state
+   */
   @Override
-  public CompletionStage<SsoSocialLogin> oauth2callback(String dest,
-      String authorizationCode,
-      String redirectURI) {
+  public String secureState(String destination) {
+    String secureString = new BigInteger(130, new SecureRandom()).toString(32);
+    return secureString + destination;
+  }
 
-    return webClient.postAbs(TOKEN_SERVER_URL)
-        .addQueryParam("grant_type", "authorization_code")
-        .addQueryParam("code", authorizationCode)
-        .addQueryParam("client_id", GOOGLE_CLIENT_ID)
-        .addQueryParam("client_secret", GOOGLE_CLIENT_SECRET)
-        .addQueryParam("redirect_uri", redirectURI)
-        .putHeader("Content-Length", "0")
-        .send()
-        .thenApply(this::parseTokenResponse)
-        .thenCompose(this::exchangeToken)
-        .thenCompose(claims -> {
-          String email = claims.getEmail();
+  @Override
+  public CompletionStage<SsoSocialLogin> oauth2callback(String state, String sessionState,
+      String code,
+      String redirectURI) {
+    if (!Optional.ofNullable(sessionState).orElse("").equals(state)) {
+      throw Boom.status(Status.UNAUTHORIZED).message("Invalid state parameter").exception();
+    }
+
+    return exchangeCode(code, redirectURI)
+        .thenCompose(this::userInfo)
+        .thenCompose(userInfo -> {
+          String destination = sessionState.substring(26);
+          String email = userInfo.getEmail();
           String Location =
-              "http://localhost:3000" + URLDecoder.decode(dest, StandardCharsets.UTF_8);
+              "http://localhost:3000" + URLDecoder.decode(destination, StandardCharsets.UTF_8);
 
           log.info("Google oauth2callback redirecting {} to {}", email, Location);
           return ssoService.socialLogin(email)
@@ -95,16 +109,40 @@ public class SsoGoogleServiceImpl implements SsoGoogleService {
         });
   }
 
-  private GoogleTokenResponse parseTokenResponse(HttpResponse<Buffer> response) {
-    return handleGoogleResponse(response, GoogleTokenResponse.class);
-
+  /**
+   * Exchange authorization code for the access token and ID token.
+   *
+   * @param code
+   * @param redirectURI
+   * @return
+   */
+  private CompletionStage<GoogleTokenResponse> exchangeCode(String code, String redirectURI) {
+    return webClient.postAbs(TOKEN_SERVER_URL)
+        .addQueryParam("grant_type", "authorization_code")
+        .addQueryParam("code", code)
+        .addQueryParam("client_id", GOOGLE_CLIENT_ID)
+        .addQueryParam("client_secret", GOOGLE_CLIENT_SECRET)
+        .addQueryParam("redirect_uri", redirectURI)
+        .putHeader("Content-Length", "0")
+        .send()
+        .thenApply(this::parseTokenResponse);
   }
 
-  private CompletionStage<GoogleAccessTokenClaims> exchangeToken(GoogleTokenResponse token) {
-    return webClient.getAbs(USER_INFO_SERVER_URL)
-        .addQueryParam("access_token", token.getAccessToken())
+  private GoogleTokenResponse parseTokenResponse(HttpResponse<Buffer> response) {
+    return handleGoogleResponse(response, GoogleTokenResponse.class);
+  }
+
+  /**
+   * Validation of ID token; https://developers.google.com/identity/sign-in/web/backend-auth#calling-the-tokeninfo-endpoint
+   *
+   * @param token
+   * @return
+   */
+  private CompletionStage<GoogleUserInfoResponse> userInfo(GoogleTokenResponse token) {
+    return webClient.getAbs(TOKEN_INFO_SERVER_URL)
+        .addQueryParam("id_token", token.getIdToken())
         .send()
-        .thenApply(response -> handleGoogleResponse(response, GoogleAccessTokenClaims.class));
+        .thenApply(response -> handleGoogleResponse(response, GoogleUserInfoResponse.class));
   }
 
   private <T> T handleGoogleResponse(HttpResponse<Buffer> response, Class<T> clazz) {
